--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -8,7 +8,8 @@ observation_sources: laser_scan_sensor
 laser_scan_sensor: {
     sensor_frame: lidar_link,
     data_type: LaserScan,
-    topic: /laser/scan,
+    topic: /scan,
+    #topic: /laser/scan,
     marking: true,
     clearing: true
   }
