[modify] lidar_link to rplidar_link

--- a/config/global_costmap_params.yaml
+++ b/config/global_costmap_params.yaml
@@ -1,10 +1,16 @@
 global_costmap:
   global_frame: map
+  #global_frame: odom
   robot_base_frame: base_link
-  publish_frequency: 1.0
-  update_frequency: 5.0
-  static_map: false
+  publish_frequency: 10.0
+  update_frequency: 10.0
+
+  transform_tolerance: 0.5
+  static_map: true
   rolling_window: true
-  width: 20.0
-  height: 20.0
-  resolution: 0.1
+
+  #static_map: false
+  #rolling_window: true
+  #width: 20.0
+  #height: 20.0
+  #resolution: 0.1
