--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,15 +1,32 @@
 obstacle_range: 3.0
 raytrace_range: 2.0
-footprint: [[0.3, 0.3], [0.3, -0.3], [-0.3, -0.3], [-0.3, 0.3]]
-inflation_radius: 0.5
+footprint: [[-0.105, -0.105], [-0.105, 0.105], [0.041, 0.105], [0.041, -0.105]]
+#footprint: [[0.3, 0.3], [0.3, -0.3], [-0.3, -0.3], [-0.3, 0.3]]
+#inflation_radius: 0.5
+inflation_radius: 1.0
+cost_scaling_factor: 3.0
+map_type: costmap
 
 observation_sources: laser_scan_sensor
 
 laser_scan_sensor: {
-    sensor_frame: lidar_link,
+    #sensor_frame: lidar_link,
+    sensor_frame: rplidar_link,
     data_type: LaserScan,
-    topic: /scan,
-    #topic: /laser/scan,
+    #topic: /scan,
+    topic: /laser/scan,
     marking: true,
     clearing: true
-  }
+}
+
+global_frame: odom
+robot_base_frame: base_link
+update_frequency: 5.0
+publish_frequency: 2.0
+static_map: false
+rolling_window: false
+width: 50.0
+height: 50.0
+resolution: 0.05
+origin_x: -12
+origin_y: 0
